# dspy-workshop

./: .gitignore  optimize_email_parser.py  optimized_parser.json  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_demo.py  yaml_formatter.py
data/: data_01.json  data_02.json  data_03.json  data_04.json  data_05.json  data_06.json  data_07.json  data_08.json  data_09.json  data_10.json  email_01.txt  email_02.txt  email_03.txt  email_04.txt  email_05.txt  email_06.txt  email_07.txt  email_08.txt  email_09.txt  email_10.txt
